package org.model;

// Jimat untuk mendapatkan tips dari pelanggan
public class CharmingCharm extends Charm {
    public CharmingCharm() { 
        super("Jimat Charming"); 
    }
}