package org.model;

// Jimat untuk mengurangi peluang tikus
public class CleanerCharm extends Charm {
    public CleanerCharm() { 
        super("Jimat Cleaner"); 
    }
}