package org.model;

public class Food extends MenuItem {
    public Food(String name, double price) {
        super(name, price);
    }
}