package org.model;

// Jimat untuk mengurangi peluang pembeli kabur
public class SecurityCharm extends Charm {
    public SecurityCharm() { 
        super("Jimat Security"); 
    }
}