package org.model;

public class Snack extends MenuItem {
    public Snack(String name, double price) {
        super(name, price);
    }
}